--- a/less/style.less
+++ b/less/style.less
@@ -46,6 +46,39 @@ body {
 	}
 }
 
+.btn-exodo {
+    background-color: @exodo-dark;
+    border: 0;
+    border-radius: 0px;
+    color: #fff;
+    display: block;
+    font: normal 13px;
+    height: 32px;
+    line-height: 32px;
+    padding: 0px 0px 0px 12px;
+    border-radius: 0;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    &:hover {
+	    background-color: @exodo-dark;
+        box-shadow: 0 0 0 3px #E4E4E4;
+        color: #fff;
+        text-decoration: none;
+    }
+    span {
+        background-color: @exodo-primary;
+        display: inline-block;
+        font: normal 13px;
+        font-size: 16px;
+        font-weight: bold;
+        font-weight: bold;
+        height: 32px;
+        line-height: 32px;
+        margin-left: 10px;
+        padding: 0 10px;
+    }
+}
+
 button, a {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
