--- a/less/topic.less
+++ b/less/topic.less
@@ -1,3 +1,52 @@
+    .topic-head {
+        margin-bottom: 20px;
+        .topic-head-top {
+            h1 {
+                font-size: 21px;
+                margin: 10px 0;
+                padding: 0;
+            }
+        }
+        .topic-head-middle {
+            margin-bottom: 15px;
+            > div {
+                clear: right;
+                float: left;
+                height: 32px;
+                width: 50%;
+            }
+            .topic-head-pagination {
+                display: block;
+                position: relative;
+                > div {
+                    bottom: 0;
+                    position: absolute;
+                    right: 0;
+                    .pagination-count {
+                        color: @exodo-lightdark;
+                        display: inline-block;
+                        font-size: 10px;
+                        margin-right: 5px;
+                        position: relative;
+                        text-align: right;
+                        top: -3px;
+                        > span {
+                            display: block;
+                        }
+                    }
+                    .pagination {
+                        margin: 0;
+                        > li {
+                            > a {
+                                padding: 3px 6px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 .topic {
     .post-content {
         > blockquote {
@@ -23,12 +72,12 @@
             }
         }
         .toggle {
-            padding: 0px 5px;
-            border: 1px solid #e0e0e0;
             background: #fcfcfc;
-            width: 50px;
-            text-align: center;
+            border: 1px solid #e0e0e0;
             display: block!important;
+            padding: 0px 5px;
+            text-align: center;
+            width: 50px;
         }
         pre {
             max-height: 350px;
@@ -51,7 +100,7 @@
         list-style-type: none;
         padding: 0;
         > li {
-            margin-bottom: 30px;
+            margin-bottom: 12px;
             &.deleted {
                 -moz-opacity: 0.30;
                 opacity: 0.30;
@@ -64,8 +113,8 @@
         }
     }
     .well {
-        padding-top: 10px;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
     .topic-stats {
         height: 34px;
@@ -82,46 +131,85 @@
     .posts {
         .post-wrapper {
             border: 1px solid rgba(0,0,0,0.06);
-        }
-        .post-block {
-            border-left: 1px solid #eee;
-            margin-left: -1px;
-            //para montar sobre el border-right de la columna del avatar;
-        }
-        .profile-image-block {
-            border-right: 1px solid #eee;
-            .nickname {
-                display: block;
-                h3 span.username-field {
-                    word-wrap: break-word;
-                    color: #cf246a;
-                    cursor: pointer;
+            .post-details {
+                background: none repeat scroll 0% 0% #F2F2F2;
+                float: left;
+                width: 100%;
+                .userinfo {
+                    background: none repeat scroll 0% 0% #F2F2F2;
+                    border-right: 1px solid #eee;
+                    clear: both;
+                    display: block;
+                    float: left;
+                    font-size: 11px;
+                    padding: 2px 12px 6px;
+                    position: relative;
+                    width: 200px;
+                    .nickname {
+                        display: block;
+                        h3 {
+	                        margin: 6px 0;
+	                        
+	                        .status {
+		                        font-size: 8px;
+	                        }
+	                        
+	                        span.username-field {
+		                        font-size: 20px;
+	                            color: #cf246a;
+	                            cursor: pointer;
+	                            word-wrap: break-word;
+	                        }
+	                    }
+                    }
+                }
+                .post-block {
+                    background: none repeat scroll 0% 0% #FFF;
+                    border-left: 1px solid #E4E4E4;
+                    margin-left: 200px;
+                    padding-bottom: 1em;
+                }
+                @media (max-width:767px) {
+                    .post-block {
+                        margin: 0;
+                    }
                 }
             }
         }
+        .post-block {
+            //para montar sobre el border-right de la columna del avatar;
+            border-left: 1px solid #eee;
+            margin-left: -1px;
+        }
         .post-info, .post-block {
-            position: relative;
             padding: 10px;
+            position: relative;
             .post-signature {
-                font-size: 12px;
                 border-top: 1px solid #ddd;
                 display: inline-block;
+                font-size: 12px;
                 margin-left: 5px;
                 > p {
                     padding-top: 5px;
                 }
                 img {
-                    max-width: 200px;
                     max-height: 60px;
+                    max-width: 200px;
                 }
             }
         }
         .topic-buttons {
-            background: rgba(0,0,0,0.02);
-            border: 1px solid rgba(0,0,0,0.06);
-            margin: 0;
-            padding: 8px 0 0 23px;
+            background: none repeat scroll 0% 0% #F2F2F2;
+            border-top: 1px solid #E4E4E4;
             clear: both;
+            display: block;
+            font: bold 11px "Open Sans",sans-serif;
+            margin: 0px 10px 0px 0px;
+            padding: 8px 9px 7px 23px;
+            width: 100%;
+            .post-tools {
+                margin-left: 10px;
+            }
             button.show {
                 display: inline-block !important;
             }
@@ -131,9 +219,7 @@
         }
         .post-block {
             .post-content {
-                padding: 10px 5px 0 5px;
                 word-wrap: break-word;
-                clear: left;
                 > ul, ol {
                     padding-bottom: 10px;
                 }
@@ -162,16 +248,16 @@
             display: none;
         }
         .post-header {
-            height: 34px;
-            line-height: 23px;
-            width: 100%;
-            display: block;
             background: linear-gradient(to right,rgba(207,36,106,1) 0%,rgba(255,148,46,1) 100%) repeat scroll 0 0 rgba(0,0,0,0);
             border-left: 1px solid #cf246a;
             border-right: 1px solid #ff942e;
+            display: block;
+            height: 34px;
+            line-height: 23px;
+            width: 100%;
             .post-meta {
-                float: right;
                 color: white;
+                float: right;
                 padding: 5px;
                 .post-index a {
                     color: white;
@@ -179,48 +265,31 @@
                 }
             }
         }
-        .topic-buttons {
-            margin: 0px;
-            border: 0;
-            border-bottom: 1px solid rgba(0,0,0,0.06);
-            padding: 8px 9px 7px 23px;
-            .post-tools {
-                margin-left: 10px;
-            }
-        }
         .post-block {
             .post-signature {
                 margin-left: 15px;
             }
-            .post-content {
-                margin-left: 10px;
-            }
         }
         .img-thumbnail {
-            float: none;
-            padding: 2px;
             border-radius: 0;
+            float: none;
             margin-bottom: 5px;
+            max-height: 150px;
+            max-width: 150px;
+            padding: 2px;
         }
     }
     .posts li[data-index="0"] {
-        .sub-post {
-        }
         .main-post {
-            display: block;
+			border-bottom: 1px solid #E4E4E4;
+			margin: 0 0 7px 0;
+			display: block;
+			padding: 12px 12px 5px 0px;
+			font-weight: bold;
+			font-size: 14px;
         }
         .col-md-11 {
             width: 100%;
-        }
-        .topic-title {
-            line-height: 1.5em;
-            width: auto;
-            overflow: hidden;
-            margin: 0 0 -5px 0;
-            padding: 0 0 5px 0;
-            i {
-                opacity: 0.7;
-            }
         }
         .avatar {
             display: none;
@@ -231,11 +300,6 @@
         .topic-buttons {
             button.show {
                 display: inline-block!important;
-            }
-        }
-        .post-block {
-            >h3 {
-                margin: 0px;
             }
         }
     }
@@ -261,8 +325,8 @@
         }
         &::after {
             .opacity(0);
-            font-family: "FontAwesome";
             content: "\f11c";
+            font-family: "FontAwesome";
             padding: 4px 0.25em;
             position: relative;
             top: 1px;
@@ -273,9 +337,9 @@
     }
     .anonymous-box {
         border: 1px solid #ddd;
-        width: 24px;
         height: 24px;
         position: relative;
         text-align: center;
+        width: 24px;
     }
 }
