[Topic] More buttons stylized

--- a/less/topic.less
+++ b/less/topic.less
@@ -222,15 +222,18 @@
 		        	.btn-link {
 			            padding: 0 5px;
 			        	color: @exodo-dark;
+			        	
+			        	&:hover {
+				        	color: @exodo-link-color;
+			        	}
+			        	
 			        	label {
 				        	font-weight: bold;
 				        	margin: 0;
 				        }
 				        i.fa {
 							font-size: 14px;
-							vertical-align: middle;
-							margin-right: 4px;
-							top: -1px;
+							margin-right: 6px;
 				        }
 		        	}
 		            &.reputation {
