[Breadcrumbs] Prepare for custom pages

--- a/less/style.less
+++ b/less/style.less
@@ -79,6 +79,13 @@ body {
     }
 }
 
+.breadcrumb-home {
+	display: inline-block;
+	top: -5px;
+	position: relative;
+	padding-right: 5px;
+}
+
 button, a {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
