[Category] Add thread pagination

--- a/less/category.less
+++ b/less/category.less
@@ -158,6 +158,28 @@
                             text-decoration: none;
                         }
                     }
+                    .threadpagination {
+	                    margin: 0;
+						display: inline-block;
+						position: relative;
+						left: 5px;
+						
+						span a {
+						    border: 1px solid #E4E4E4;
+						    height: 15.99px;
+						    padding: 0px 4px;
+						    margin-left: 1px;
+						    background: none repeat scroll 0% 0% #FFF;
+						    text-decoration: none;
+						    border-radius: 2px;
+						    font-size: 11px;
+						    display: inline;
+						    float: none;
+						}
+						.separator {
+							font-size: 10px;
+						}
+                    }
                 }
                 .threadstats {
                     font-size: 12px;
