[Topic] Add userCustomProfileInfo

--- a/less/topic.less
+++ b/less/topic.less
@@ -154,6 +154,14 @@
                             }
                         }
                     }
+                    .userinfo-extra{
+	                    font-size: 10px;
+						dt {
+						    float: left;
+						    margin-right: 10px;
+						    width: auto;
+						}
+                    }
                 }
                 .post-block {
                     background: none repeat scroll 0% 0% #FFF;
