--- a/less/header.less
+++ b/less/header.less
@@ -117,116 +117,55 @@
         height:120px;
         background: @exodo-gradient;
         position:relative;
-        margin-bottom: 10px;
-        .logo-image {
-            height:auto!important;
-            position:absolute;
-            left:25px;
-            top:38px;
-            z-index:9;
+        margin: 10px 0;
+        .tile {
+			height: 120px;
+			display: inline-block;
+			float: right;
+			border-left: 12px solid rgb(246, 246, 246);
+			width: 132px;
+			position: relative;
+			transition: all 0.3s ease 0s;
+	        @media (max-width:767px) { display: none; }
+	        &:hover,
+	        &.selected {
+				background-color: @exodo-dark;
+	        }
+			a {
+				text-transform: lowercase;
+				display: block;
+				background-attachment: scroll;
+				background-repeat: no-repeat;
+				background-image: url("https://exo.do/images/exodo/misc/nav-icons-bg.png");
+				width: 120px;
+				height: 120px;
+				text-align: left;
+				color: #FFF;
+				font: 16px/23px "Open Sans",sans-serif;
+				text-decoration: none;
+				position: relative;
+		        &.exodo-community {
+					background-position: left -256px !important;
+		        }
+				span {
+					position: absolute;
+					left: 12px;
+					bottom: 12px;
+					line-height: 16px;
+					padding-right: 12px;
+				}
+			}
         }
-        #navbar {
-            position:relative;
-            background:none;
-            margin:10px 0 0;
-            color:#FFF;
-            font:13px @exodo-font-family;
-            border:0 solid #FFF;
-            a {
-                color:#fff;
-            }
-            a:hover {
-                color:#fff;
-            }
-            #navtabs {
-                background:0;
-                padding:0;
-                text-align:right;
-                font-size:0;
-                display:block;
-                margin:0;
-                ul {
-                    position:absolute;
-                    top:120px;
-                    left:0;
-                    width:100%;
-                    border-top:0 none;
-                    direction:inherit;
-                    li {
-                        border-right:0;
-                        position:relative;
-                    }
-                    li:first-child {
-                        margin-left:12px;
-                        border-left:0;
-                    }
-                }
-                ul.navbar-links {
-                    border-top:solid 12px #f6f6f6;
-                    height:46px;
-                    font:13px @exodo-font-family;
-                    background: @exodo-dark;
-                    a {
-                        text-decoration:none;
-                    }
-                    & > li {
-                        font:13px/30px @exodo-font-family;
-                        padding:2.4px 6px;
-                    }
-                    & > li:last-child {
-                        margin-right:12px;
-                    }
-                }
-                & > li {
-                    border-left:12px solid #f6f6f6;
-                }
-                li {
-                    border-right:0 none;
-                    display:inline-block;
-                    a.navtab {
-                        text-transform:lowercase;
-                        line-height:23px;
-                        display:block;
-                        background:0;
-                        width:120px;
-                        height:120px;
-                        text-align:left;
-                        color:#fff;
-                        font:16px/23px @exodo-font-family;
-                        text-decoration:none;
-                        position:relative;
-                    }
-                    a.navtab:hover {
-                        background: @exodo-dark;
-                        color:#fff;
-                    }
-                }
-                li.selected {
-                    a.navtab {
-                        color:#fff;
-                        background: @exodo-dark;
-                        position:relative;
-                        z-index:10;
-                    }
-                    li {
-                        a {
-                            text-decoration:none;
-                            font:13px/34px @exodo-font-family;
-                            color:#fff;
-                            padding:2.4px 6px;
-                        }
-                    }
-                }
-                a {
-                    & > span {
-                        position:absolute;
-                        left:12px;
-                        bottom:12px;
-                        line-height:16px;
-                        padding-right:12px;
-                    }
-                }
-            }
+        .logo-image {
+            height:100%;
+            background: url("http://i.imgur.com/AcFXnik.png") no-repeat;
+            background-position: 25px center;
+	        @media (max-width:767px) { background-position: center center; }
+            display: block;
+        }
+        .col-header {
+			overflow: hidden;
+			height: 100%;
         }
     }
 }
