--- a/less/header.less
+++ b/less/header.less
@@ -437,6 +437,14 @@
 	transition: none !important;
 }
 
-.navbar-nav > li > a {
-	outline: none;
+.navbar-collapse {
+	
+	.navbar-nav {
+		li, span, a {
+			outline: none;
+			white-space: nowrap;
+		}
+	}
+
+	margin: 0 auto !important;
 }
