--- a/less/topic.less
+++ b/less/topic.less
@@ -230,6 +230,7 @@
 	                        label {
 	                            font-weight: bold;
 	                            margin: 0;
+								vertical-align: middle;
 	                        }
 	                        i.fa {
 	                            font-size: 12px;
