--- a/less/header.less
+++ b/less/header.less
@@ -126,7 +126,7 @@
 			width: 132px;
 			position: relative;
 			transition: all 0.3s ease 0s;
-	        @media (max-width:767px) { display: none; }
+	        @media (max-width: @screen-sm-min) { display: none; }
 	        &:hover,
 	        &.selected {
 				background-color: @exodo-dark;
@@ -160,7 +160,7 @@
             height:100%;
             background: url("http://i.imgur.com/AcFXnik.png") no-repeat;
             background-position: 25px center;
-	        @media (max-width:767px) { background-position: center center; }
+	        @media (max-width: @screen-sm-min) { background-position: center center; }
             display: block;
         }
         .col-header {
@@ -305,7 +305,7 @@
 			padding: 10px;
 		}
 
-		@media (max-width: 767px) {
+		@media (max-width: @screen-sm-min) {
 			.progress-container {
 				display: inline-block;
 				position: static;
