--- a/less/topic.less
+++ b/less/topic.less
@@ -117,7 +117,7 @@
     .topic-main-buttons {
         padding-bottom: 0px;
     }
-    @media (max-width:767px) {
+    @media (max-width: @screen-sm-min) {
         .topic-main-buttons {
             margin-bottom: 0px;
         }
@@ -169,7 +169,7 @@
                     margin-left: 200px;
                     padding-bottom: 1em;
                 }
-                @media (max-width:767px) {
+                @media (max-width: @screen-sm-min) {
                     .post-block {
 	                    border: none;
                         margin: 0;
@@ -213,7 +213,7 @@
             button.show {
                 display: inline-block !important;
             }
-            @media (max-width:767px) {
+            @media (max-width: @screen-sm-min) {
                 padding: 5px 10px;
             }
             .pull-left, .pull-right {
