Composer Re-Styling

--- a/modules/taskbar.less
+++ b/modules/taskbar.less
@@ -72,3 +72,21 @@
 		display: none !important;
 	}
 }
+
+
+#taskbar {
+	
+	background-color: @exodo-dark;
+	opacity: 1;
+	
+	.navbar-nav {
+		
+		a:hover, a:focus {
+			color: white;
+		}
+		
+		.active a:hover, .active a:focus {
+			color: #555;
+		}
+	}
+}
