--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,10 @@
 //
 //## Brand colors for use across the theme.
 @exodo-primary:         	#CF246A;
+@exodo-lightprimary:        lighten(@exodo-primary, 5%);
+@exodo-lighterprimary:      lighten(@exodo-primary, 10%);
+@exodo-darkprimary:         darken(@exodo-primary, 5%);
+@exodo-darkerprimary:       darken(@exodo-primary, 10%);
 @exodo-secondary:       	#FF942E;
 @exodo-dark:         		#2E3539;
 @exodo-lightdark:			#8D8D8D;
