--- a/modules/composer.less
+++ b/modules/composer.less
@@ -161,3 +161,97 @@
 		visibility: hidden;
 	}
 }
+
+
+.composer {
+	
+	background-color: white;
+	box-shadow: 0 0 5px 0 lightgray;
+	min-height: 200px;
+	
+	.composer-container {
+			
+		.title-container {
+			.visible-xs();
+		}
+		
+		.title {
+			background: none;
+			border: medium none;
+			box-shadow: none;
+			cursor: default;
+			font-size: 16px !important;
+			padding: 5px;
+		}
+		
+		.write-preview-container textarea.write {
+			border: 1px solid lightgray;
+			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+			padding: 15px;
+		}
+
+		.btn-group {
+			background-color: #fafafa;
+			border: 1px solid #f1f1f1;
+			margin-left: 7px !important;
+		}
+		
+		.formatting-bar  .btn.btn-link:hover {
+			background-color: @exodo-primary;
+			color: white;
+		}
+		
+		.action-bar {
+
+			margin-right: 7px;
+			border: none;
+			background-color: transparent;
+
+			.btn {
+				border-radius: 0;
+				margin-left: 5px;
+			}
+
+			.btn-primary {
+				background-color: @exodo-primary;
+				border-color: @exodo-darkprimary;
+
+				&:hover {
+					background-color: @exodo-darkprimary;
+				}
+			}
+
+		}
+		
+		.resizer {
+
+			top: -15px;
+
+			.trigger {
+				border: 1px solid lightgray;
+				border-radius: 30px;
+				height: 30px;
+				line-height: 42px;
+				top: 0px;
+				width: 30px;
+
+				&:hover {
+					background-color: #CCC;
+					cursor: ns-resize;
+				}
+			}
+
+			.trigger i.fa {
+				font-size: 12px;
+				top: -8px;
+			}
+
+			left: 0;
+		}
+
+		.preview.well {
+			padding: 15px;
+		}
+
+	}
+}
