--- a/modules/composer.less
+++ b/modules/composer.less
@@ -255,3 +255,60 @@
 
 	}
 }
+
+/* Redactor Plugin */
+.composer.redactor {
+	-moz-user-select: text !important;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	z-index: 15 !important;
+	
+	.formatting-bar .btn-group:first-child {
+		display: none;
+	}
+	
+	.action-bar {
+		
+		position: absolute;
+		z-index: 10;
+		right: 18px;
+		top: 26px;
+		
+		.btn, .btn.btn-primary {
+			border: none;
+			background-color: transparent;
+			font-size: 12px;
+			color: #333;
+			height: 32px;
+			margin: 0;
+		}
+
+		.btn.btn-primary {
+			color: @exodo-primary;
+		}
+		
+		.btn.btn-default {
+			color: gray;
+		}
+	}
+	
+	.redactor_toolbar li a:hover, .action-bar .btn:hover {
+		background-color: @exodo-primary !important;
+		color: white;
+	}
+	
+	.redactor_box {
+		height: 100%;
+	}
+	
+	.redactor_editor {
+		height: ~"calc(100% - 32px)";
+	}
+	
+	.preview-container {
+		display: none;
+	}
+	
+	.write-container {
+		width: 100%;
+	}
+}
