--- a/modules/composer.less
+++ b/modules/composer.less
@@ -269,7 +269,7 @@
 	.action-bar {
 		
 		position: absolute;
-		z-index: 10;
+		z-index: 25;
 		right: 18px;
 		top: 26px;
 		
@@ -291,16 +291,16 @@
 		}
 	}
 	
-	.redactor_toolbar li a:hover, .action-bar .btn:hover {
+	.redactor-toolbar li a:hover, .action-bar .btn:hover {
 		background-color: @exodo-primary !important;
 		color: white;
 	}
 	
-	.redactor_box {
+	.redactor-box {
 		height: 100%;
 	}
 	
-	.redactor_editor {
+	.redactor-editor {
 		height: ~"calc(100% - 32px)";
 	}
 	
@@ -310,5 +310,9 @@
 	
 	.write-container {
 		width: 100%;
+	}
+	
+	.redactor-toolbar, .redactor-dropdown {
+		z-index: 20 !important;
 	}
 }
