Arreglos de estilos para Redactor

--- a/less/style.less
+++ b/less/style.less
@@ -33,7 +33,7 @@ body {
 	font-family: @exodo-font-family;
 	background: none;
 	width: 92%;
-	margin: 0 auto;
+	margin: 0 auto !important;
 	
 	a {
 		color: @exodo-link-color;
