--- a/modules/composer.less
+++ b/modules/composer.less
@@ -257,7 +257,7 @@
 }
 
 /* Redactor Plugin */
-.composer.redactor {
+.composer.redactor, .redactor-box-fullscreen {
 	-moz-user-select: text !important;
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
 	z-index: 15 !important;
@@ -267,11 +267,6 @@
 	}
 	
 	.action-bar {
-		
-		position: absolute;
-		z-index: 25;
-		right: 18px;
-		top: 26px;
 		
 		.btn, .btn.btn-primary {
 			border: none;
@@ -297,11 +292,11 @@
 	}
 	
 	.redactor-box {
-		height: 100%;
+		height: 100% !important;
 	}
 	
 	.redactor-editor {
-		height: ~"calc(100% - 32px)";
+		height: ~"calc(100% - 32px)" !important;
 	}
 	
 	.preview-container {
@@ -315,4 +310,9 @@
 	.redactor-toolbar, .redactor-dropdown {
 		z-index: 20 !important;
 	}
+	
+}
+
+.redactor-dropdown a:hover {
+	background-color: @exodo-primary !important;
 }
