--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,6 @@
 #header {
     background:none;
-    margin:0 0 10px;
+    margin:0 0 0px;
     padding:0;
     position:relative;
     display:block;
@@ -114,10 +114,10 @@
         }
     }
     #middle_header {
-        height:120px;
+        height:100px;
         background: @exodo-gradient;
         position:relative;
-        margin: 10px 0;
+        margin: 5px 0;
         .tile {
 			height: 120px;
 			display: inline-block;
@@ -320,7 +320,7 @@
 	#notif-list {
 		li {
 			font-size: 12px;
-			width: 300px;
+			width: 400px;
 			text-align: left;
 			margin-bottom: 5px;
 
@@ -338,6 +338,7 @@
 				}
 
 				.text {
+					white-space: normal;
 					margin-left: 40px;
 					display: block;
 				}
