Cambios de diseño y mejoras responsive

--- a/less/category.less
+++ b/less/category.less
@@ -3,9 +3,10 @@
         margin-bottom: 20px;
         .category-head-top {
             h1 {
-                font-size: 21px;
+                font-size: 30px;
                 margin: 10px 0 5px;
                 padding: 0;
+				color: @exodo-primary;
             }
         }
         .category-head-middle {
@@ -260,7 +261,6 @@
             float: left;
             margin-right: 0.5%;
             position: relative;
-            width: 49.5%;
         }
         > .panel:last-child {
             margin-left: 0.5%;
