--- a/less/topic.less
+++ b/less/topic.less
@@ -169,7 +169,7 @@
                     margin-left: 200px;
                     padding-bottom: 1em;
                 }
-                @media (max-width: @screen-sm-min) {
+                @media (max-width: 767px) {
                     .post-block {
 	                    border: none;
                         margin: 0;
