--- a/modules/alerts.less
+++ b/modules/alerts.less
@@ -1,96 +1,35 @@
 .alert-window {
-    position: fixed;
-    bottom: 0;
-    width: 58%;
-    max-width: 640px;
-    margin-left: 36%;
-    z-index: 99999;
-    text-align: center;
-	@media (max-width: @screen-sm-min) {
-		left:0!important;
-		margin-left:10%!important;
-		width:80%;
-		max-width:none;
+	position:fixed;
+	width:300px;
+	z-index:10;
+	.toaster-alert {
+		.pointer;
 	}
-    .alert-dismissable {
-        padding-right: 25px;
-        .close {
-            position: relative;
-            float: right;
-            clear: both;
-            display: inline;
-            padding: 0 5px;
-        }
-        .close:hover {
-            background: #fff;
-            color: rgba(255,255,255,0.2);
-            opacity: .6;
-            padding: 0 5px;
-            border-radius: 0;
-        }
-    }
-    .alert-dismissable.alert-info {
-        .close {
-            color: rgba(0,0,0,0.6);
-        }
-        .close:hover {
-            color: #000;
-        }
-    }
-    .alert {
-        img {
-            float: left;
-            padding-right: 10px;
-        }
-    }
-	&.alert-exodo {
-	    left: 50%;
-	    margin-left: -320px;
-	    .alert {
-	        display: inline-block;
-	        background: rgba(255,255,255,0.8);
-	        padding: 12px 25px;
-	        margin: 0;
-	        font-size: 14px;
-	        -webkit-border-top-right-radius: 4px;
-	        -moz-border-radius-topright: 4px;
-	        border-top-right-radius: 4px;
-	        -webkit-border-top-left-radius: 4px;
-	        -moz-border-radius-topleft: 4px;
-	        border-top-left-radius: 4px;
-	        -webkit-border-bottom-left-radius: 0;
-	        -moz-border-radius-bottomleft: 0;
-	        border-bottom-left-radius: 0;
-	        -webkit-border-bottom-right-radius: 0;
-	        -moz-border-radius-bottomright: 0;
-	        border-bottom-right-radius: 0;
-	        color: rgba(0,0,0,0.8);
-	        margin-top: -2px;
-	        border: none;
-	        p {
-	            display: inline;
-	            position: relative;
-	        }
-	    }
-	    .alert.alert-success {
-	        background: rgba(87, 174, 105, 0.8);
-	        border: 1px solid #57ad68;
-	    }
-	    .alert.alert-danger {
-	        background: rgba(204, 84, 84, 0.8);
-			border: 1px solid #cc5454;
-	    }
-	    .alert.alert-warning {
-	        background: rgba(204, 84, 84, 0.8);
-			border: 1px solid #cc5454;
-	    }
+
+	.alert {
+		img {
+			float:left;
+			padding-right:10px;
+		}
 	}
 }
-.alert-window.alert-exodo .alert.alert-success,.alert-window.alert-exodo .alert.alert-danger,.alert-window.alert-exodo .alert.alert-warning {
-    color: rgba(255,255,255,0.97);
+
+.alert-left-top {
+	left:20px;
+	top:70px;
 }
-.alert-window.alert-exodo .alert.alert-success a,.alert-window.alert-exodo .alert.alert-danger a,.alert-window.alert-exodo .alert.alert-warning a {
-    color: #fff;
-    font-weight: 700;
-    border-top: 1px solid rgba(255,255,255,0.3);
+
+.alert-left-bottom {
+	left:20px;
+	bottom:20px;
+}
+
+.alert-right-top {
+	right:20px;
+	top:70px;
+}
+
+.alert-right-bottom {
+	right:20px;
+	bottom:20px;
 }
