Mostrar icono de la categoría en la listas de hilos
Excepto si estás dentro de una categoría, claro

--- a/less/category.less
+++ b/less/category.less
@@ -241,6 +241,15 @@
 						background-position: 14px 20px;
                     }
                 }
+                
+                .category-icon {
+                    color: #bbb;
+                    float: left;
+                    padding: 12px 5px 5px;
+                    text-align: center;
+                    vertical-align: middle;
+                    width: 60px;
+                }
             }
 			&.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot-30-right.png"); }
 			&.unread.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot_new-30-right.png"); }
