--- a/less/topic.less
+++ b/less/topic.less
@@ -292,6 +292,7 @@
             width: 100%;
             padding: 5px 10px;
             color: #fff;
+			font-weight: bold;
             .post-date {
                 zoom: 1;
                 filter: alpha(opacity=70);
