Links Hover colors

--- a/less/category.less
+++ b/less/category.less
@@ -159,8 +159,15 @@
                         margin-right: 12px;
                     }
                     > small {
-                        a, a:hover {
+                        a {
+
                             color: @exodo-text-color;
+                            text-decoration: none;
+							
+                        }
+						
+						a:hover {
+                            color: @exodo-link-color;
                             text-decoration: none;
                         }
                     }
