--- a/less/style.less
+++ b/less/style.less
@@ -42,10 +42,14 @@ body {
 	}
 	
 	a:hover {
-		color: @exodo-link-color;
-		text-decoration: underline;
+		color: @exodo-secondary;
+		text-decoration: none;
+		
 	}
+	
+	
 }
+
 
 .btn-exodo {
     background-color: @exodo-dark;
