Posttime Helper fix

--- a/less/category.less
+++ b/less/category.less
@@ -208,7 +208,12 @@
                     margin: 0;
                     padding: 9.74px 1% 9.74px 1%;
                     width: @exodo-category-threadlastpost-size;
+					a.lastpost {
+						color: @exodo-text-color;
+                        text-decoration: none;
+					}
                     a.lastpost:hover {
+						color: @exodo-link-color;
                         text-decoration: none;
                     }
                     > dd.unreplied {
