topics title fix & more css changes

--- a/less/category.less
+++ b/less/category.less
@@ -1,6 +1,6 @@
 .category {
     .category-head {
-        margin-bottom: 20px;
+        margin-bottom: 7px;
         .category-head-top {
             h1 {
                 font-size: 30px;
@@ -40,7 +40,7 @@
                         margin: 0;
                         > li {
                             > a {
-                                padding: 3px 6px;
+                                padding: 3px 6px !important;
                             }
                         }
                     }
@@ -80,7 +80,7 @@
             border-right: @exodo-secondary;
             color: #FFF;
             display: table;
-            padding: 14px 5px;
+            padding: 7px 5px;
             width: 100%;
             a, a:hover {
                 color: #FFF;
@@ -137,7 +137,7 @@
                     overflow: hidden;
                     padding: 0;
                     text-overflow: ellipsis;
-                    white-space: nowrap;
+                    /* white-space: nowrap; */
                     a {
                         display: inline-block;
                         width: 100%;
