--- a/less/topic.less
+++ b/less/topic.less
@@ -38,7 +38,7 @@
                     margin: 0;
                     > li {
                         > a {
-                            padding: 3px 6px;
+                            padding: 3px 6px !important;
                         }
                     }
                 }
