New widget on home's center

--- a/less/home.less
+++ b/less/home.less
@@ -237,5 +237,16 @@
 	
 	padding-left: 1px; 
 	padding-right: 1px;
-	
+	width: 70%;
+}
+
+#sidebar
+{
+	width: 30%;
+}
+
+
+#homecenterwidget
+{
+	float: left;
 }
