--- a/less/home.less
+++ b/less/home.less
@@ -237,12 +237,12 @@
 	
 	padding-left: 1px; 
 	padding-right: 1px;
-	width: 70%;
+	/* width: 50%; */
 }
 
 #sidebar
 {
-	width: 30%;
+	/*width: 50%; */
 }
 
 
