--- a/less/category.less
+++ b/less/category.less
@@ -125,7 +125,7 @@
                 border-radius: 0;
                 border-top: none;
                 margin-bottom: 0;
-                padding: 5px 0;
+                /* padding: 5px 0; */
                 small {
                     font-size: 12px;
                 }
