--- a/less/home.less
+++ b/less/home.less
@@ -47,7 +47,7 @@
 		}
 		
 		.category-last-topic {
-			margin-top: 15px;
+			margin-top: 5px;
 			overflow: hidden;
 			
 			.last-topic-title {
@@ -243,10 +243,14 @@
 #sidebar
 {
 	/*width: 50%; */
+	padding-left: 1px;
+	padding-right: 1px;
 }
 
 
 #homecenterwidget
 {
 	float: left;
+	padding-left: 1px;
+	padding-right: 1px;
 }
