Mostrar avatar del usuario en la lista de hilos

--- a/less/category.less
+++ b/less/category.less
@@ -254,13 +254,12 @@
                     }
                 }
                 
-                .category-icon {
-                    color: #bbb;
+                .profile-image {
+                    width: 36px;
+                    height: 36px;
+                    border-radius: 100%;
+                    margin: 5px 12px 5px;
                     float: left;
-                    padding: 12px 5px 5px;
-                    text-align: center;
-                    vertical-align: middle;
-                    width: 60px;
                 }
             }
 			&.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot-30-right.png"); }
