--- a/less/category.less
+++ b/less/category.less
@@ -93,7 +93,7 @@
             }
             span.threadinfo {
                 width: (@exodo-category-threadinfo-size - 9%);
-                @media (max-width: @screen-sm-min) {
+                @media (max-width: (@screen-sm-min - 1px)) {
                     width: (@exodo-category-threadinfo-size + @exodo-category-threadstats-size);
                 }
             }
@@ -134,6 +134,7 @@
                     line-height: 1.23;
                     margin: 0;
                     margin-top: 10px;
+                    margin-bottom: 3px;
                     overflow: hidden;
                     padding: 0;
                     text-overflow: ellipsis;
@@ -150,9 +151,9 @@
                 }
                 .threadinfo {
                     width: @exodo-category-threadinfo-size;
-                    padding-right: 10px;
-                    @media (max-width: @screen-sm-min) {
-	                    width: (@exodo-category-threadinfo-size + @exodo-category-threadstats-size);
+                    padding: 0 10px;
+                    @media (max-width: (@screen-sm-min - 1px)) {
+	                    width: 100%;
                     }
                     .threaddetails {
                         float: right;
@@ -208,6 +209,9 @@
                     margin: 0;
                     padding: 9.74px 1% 9.74px 1%;
                     width: @exodo-category-threadlastpost-size;
+                    @media (max-width: (@screen-sm-min - 1px)) {
+	                   width: 100%;
+                    }
 					a.lastpost {
 						color: @exodo-text-color;
                         text-decoration: none;
@@ -219,10 +223,10 @@
                     > dd.unreplied {
                         padding-top: 7px;
                     }
-                    .user-pic {
-                        height: 15px;
-                        width: 15px;
-                    }
+                }
+                .user-pic {
+                    height: 15px;
+                    width: 15px;
                 }
                 .threadimod {
                     margin-top: 18px;
@@ -258,9 +262,10 @@
                     width: 36px;
                     height: 36px;
                     border-radius: 100%;
-                    margin: 5px 12px 5px;
+                    margin: 8px 12px 5px 0;
                     float: left;
                 }
+                
             }
 			&.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot-30-right.png"); }
 			&.unread.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot_new-30-right.png"); }
