--- a/less/topic.less
+++ b/less/topic.less
@@ -85,7 +85,12 @@
                 word-wrap: normal;
             }
         }
-        @media (max-width:@screen-sm-min) {
+
+        min-height: 165px;
+        
+        @media (max-width:(@screen-sm-min - 1px)) {
+            min-height: 80px;
+            
             pre {
                 max-height: 250px;
             }
@@ -197,6 +202,8 @@
                     max-height: 60px;
                     max-width: 200px;
                 }
+                max-height: 100px;
+                overflow: hidden;
             }
         }
         .topic-buttons {
@@ -338,9 +345,6 @@
         }
         .avatar {
             display: none;
-        }
-        .post-content {
-            min-height: 80px;
         }
         .topic-buttons {
             button.show {
