home fixes,css,can use 2 rows if needed

--- a/less/home.less
+++ b/less/home.less
@@ -1,9 +1,9 @@
 .home {
 	
-    margin: 30px auto;
+    margin: 0px auto;
 	
 	.category {
-		padding: 5px;
+		padding-bottom: 10px;
 		
 		.category-box {
 			background-color: white;
@@ -213,7 +213,7 @@
 
 .tag-item, .tag-topic-count {
 	color: white;
-	font-size: 16px;
+	font-size: 12px;
 	font-weight: normal;
 	background: #cf246a;
 	border: none;
