--- a/less/home.less
+++ b/less/home.less
@@ -60,6 +60,11 @@
 				width: 100%;
 			}
 			
+			.last-topic-title:first-letter {
+					text-transform:uppercase;
+				}
+			
+			
 			.last-topic-date {
 				font-size: 80%;
 			}
@@ -237,7 +242,6 @@
 	
 	padding-left: 1px; 
 	padding-right: 1px;
-	/* width: 50%; */
 }
 
 #sidebar
@@ -247,10 +251,11 @@
 	padding-right: 1px;
 }
 
-
 #homecenterwidget
 {
 	float: left;
 	padding-left: 1px;
 	padding-right: 1px;
 }
+
+
