--- a/less/topic.less
+++ b/less/topic.less
@@ -5,7 +5,11 @@
             font-size: 30px;
             margin: 10px 0;
             padding: 0;
+			
         }
+		h1:first-letter {
+			text-transform:uppercase;
+		}
     }
     .topic-head-middle {
         margin-bottom: 15px;
@@ -202,7 +206,7 @@
                     max-height: 60px;
                     max-width: 200px;
                 }
-                max-height: 100px;
+                max-height: 50px;
                 overflow: hidden;
             }
         }
